--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<h1>Dilshan Sandaruwan</h1>
-<h1>GDSE 66</h1>
-<h1>http://dilshansandaruwan.42web.io/</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <title>My portfolio</title>
+    <link rel="icon"href="nameicon.png">
+</head>
+<body>
+    
+</body>
+</html>
