add description and few words this website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
     <title>My portfolio</title>
     <link rel="icon"href="nameicon.png">
+    <meta name="keywords" content="Dilsha Sandaruwan,Software Engineer , Fullstack Developer , Student, Software Engineer Student, Best Software Engineer in the Sri lanka, Web Designer">
+    <meta name="description" content="Empowering the web with end-to-end brilliance.">
+    <meta name="owner" content="Dilshan Sandaruwan">
+    <meta name="author" content="Dilshan Sandaruwan">
+    <meta name="red">
 </head>
 <body>
     
