add HTML Content

--- a/index.html
+++ b/index.html
@@ -8,9 +8,52 @@
     <meta name="description" content="Empowering the web with end-to-end brilliance.">
     <meta name="owner" content="Dilshan Sandaruwan">
     <meta name="author" content="Dilshan Sandaruwan">
-    <meta name="red">
+    <meta name="theme-colour" content="red">
+    <meta name ="robots" content="index,follow">
 </head>
 <body>
+    <header>
+        <nav></nav>
+    </header>
+
+    <section>
+        <hgroup>
+            <h1></h1>
+        </hgroup>
+        <nav></nav>
+    </section>
     
+    <section>
+        <h1></h1>
+        <article></article>
+    </section>
+
+    <section>
+        <h1></h1>
+
+    </section>
+
+    <section>
+        <h1></h1>
+    </section>
+
+    <section>
+        <h1></h1>
+    </section>
+
+    <section>
+        <h1></h1>
+        <nav></nav>
+    </section>
+
+    <section>
+        <h1></h1>
+        <section></section>
+        <section></section>
+    </section>
+
+    <footer>
+        <nav></nav>
+    </footer>
 </body>
 </html>
