--- a/index.html
+++ b/index.html
@@ -24,30 +24,77 @@
     </section>
     
     <section>
-        <h1></h1>
-        <article></article>
+        <h1>Who I am</h1>
+        <article>
+            <p>I am Dilshan. A student of Grduate Diploma in Software Engineering 
+                and currently completing my Second semester. I like to improve my 
+                skills working with projects.
+            
+                Im very passionate and dedicated to my work. An easy going person with a 
+                positive attitude and good team work ability.
+                </p>
+                <pre>
+                    Name : Dilshan Sandaruwan Saddamangala  
+
+Age : 18 years                      
+
+Contact : +94 70 4348231
+
+Location : Galle, Sri Lanka
+
+Email : shydor2005@gmail.com
+
+Degree : Undergraduate
+
+
+                </pre>
+        </article>
     </section>
 
     <section>
-        <h1></h1>
-
+        <h1>Education</h1>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </section>
 
     <section>
-        <h1></h1>
+        <h1>My skills</h1>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </section>
 
     <section>
-        <h1></h1>
+        <h1>Gallery</h1>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </section>
 
     <section>
-        <h1></h1>
+        <h1>Meet my projects</h1>
         <nav></nav>
     </section>
 
     <section>
-        <h1></h1>
+        <h1>Contact me</h1>
         <section></section>
         <section></section>
     </section>
