update text content

--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <menu></menu>
+        </nav>
     </header>
 
     <section>
         <hgroup>
-            <h1></h1>
+            <h1>Hi ! I’m Dilshan Sandaruwan</h1>
+            <h3>A Full-Stack Developer</h3>
         </hgroup>
-        <nav></nav>
+        <nav>
+            <div></div>
+            <div></div>
+            <div></div>
+        </nav>
+        <div></div>
     </section>
     
     <section>
         <h1>Who I am</h1>
+        <div></div>
         <article>
             <p>I am Dilshan. A student of Grduate Diploma in Software Engineering 
                 and currently completing my Second semester. I like to improve my 
@@ -34,7 +43,7 @@
                 positive attitude and good team work ability.
                 </p>
                 <pre>
-                    Name : Dilshan Sandaruwan Saddamangala  
+Name : Dilshan Sandaruwan Saddamangala  
 
 Age : 18 years                      
 
@@ -45,14 +54,16 @@ Location : Galle, Sri Lanka
 Email : shydor2005@gmail.com
 
 Degree : Undergraduate
-
-
                 </pre>
         </article>
     </section>
 
     <section>
         <h1>Education</h1>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
         <div></div>
         <div></div>
         <div></div>
@@ -95,12 +106,23 @@ Degree : Undergraduate
 
     <section>
         <h1>Contact me</h1>
-        <section></section>
+        <section>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
         <section></section>
     </section>
 
     <footer>
-        <nav></nav>
+        <nav>
+            <menu>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </menu>
+        </nav>
     </footer>
 </body>
 </html>
