--- a/index.html
+++ b/index.html
@@ -71,13 +71,18 @@ Degree : Undergraduate
             <h4> Institute of Software Engineering 2022 - 2024</h4>
             </hgroup>
         </div>
-        
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+
+        <div>
+            <img src="assets/images/sclLogo.png">
+        </div>
+        <div>
+            <hgroup>
+                <h2>G.C.E Advance Level Examination</h2>
+                <h4>Devapathiraja national collage
+                    2014 - 2022</h4>
+            </hgroup>
+        </div>
+
     </section>
 
     <section>
