--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ Degree : Undergraduate
             <img src="assets/images/IJSElogo.png">
         </div>
         <div>
+            <img src="assets/images/Rectangle%2087.png">
             <hgroup>
             <h2>Graduate Diploma in Software Engineering</h2>
             <h4> Institute of Software Engineering 2022 - 2024</h4>
@@ -83,6 +84,22 @@ Degree : Undergraduate
             </hgroup>
         </div>
 
+        <img src="assets/images/CFTLlogo.png">
+        <div>
+            <hgroup>
+                <h2>G.C.E Ordinary Level Examination</h2>
+                <h4>Minco  Collage Colombo 2019 - 2021</h4>
+            </hgroup>
+        </div>
+
+        <img src="assets/images/Ellipse%206.png">
+        <div>
+            <hgroup>
+                <h2>Primary School </h2>
+                <h4>Sirisumana  Collage Rathgama
+                    2009 - 2013</h4>
+            </hgroup>
+        </div>
     </section>
 
     <section>
