--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ Degree : Undergraduate
             <img src="assets/images/sclLogo.png">
         </div>
         <div>
+            <img src="assets/images/Rectangle%2087.png">
             <hgroup>
                 <h2>G.C.E Advance Level Examination</h2>
                 <h4>Devapathiraja national collage
