--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Degree : Undergraduate
 
         <img src="assets/images/CFTLlogo.png">
         <div>
+            <img src="assets/images/Rectangle%2087.png">
             <hgroup>
                 <h2>G.C.E Ordinary Level Examination</h2>
                 <h4>Minco  Collage Colombo 2019 - 2021</h4>
@@ -95,6 +96,7 @@ Degree : Undergraduate
 
         <img src="assets/images/Ellipse%206.png">
         <div>
+            <img src="assets/images/Rectangle%2087.png">
             <hgroup>
                 <h2>Primary School </h2>
                 <h4>Sirisumana  Collage Rathgama
