--- a/index.html
+++ b/index.html
@@ -107,21 +107,65 @@ Degree : Undergraduate
 
     <section>
         <h1>My skills</h1>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <img src="assets/images/A.png">
+        </div>
+
+        <div>
+            <img src="assets/images/B.png">
+        </div>
+
+        <div>
+            <img src="assets/images/C.png">
+        </div>
+
+        <div>
+            <img src="assets/images/D.png">
+        </div>
+
+        <div>
+            <img src="assets/images/E.png">
+        </div>
+
+        <div>
+             <img src="assets/images/F.png">
+        </div>
+
+        <div>
+            <img src="assets/images/G.png">
+        </div>
+
+        <div>
+            <img src="assets/images/H.png">
+        </div>
+
+        <div>
+            <img src="assets/images/I.png">
+        </div>
+
+        <div>
+            <img src="assets/images/J.png">
+        </div>
+
+        <div>
+            <img src="assets/images/K.png">
+        </div>
+
+        <div>
+            <img src="assets/images/L.png">
+        </div>
+
+        <div>
+            <img src="assets/images/M.png">
+        </div>
+
+        <div>
+            <img src="assets/images/N.png">
+        </div>
+
+        <div>
+            <img src="assets/images/O.png">
+        </div>
     </section>
 
     <section>
