--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             <div><a href="https://www.linkedin.com/in/dilshan-sandaruwan-16013027b/">linkedin</a></div>
             <div><a href="https://www.youtube.com/">youtube</a></div>
             <div><a href="https://github.com/DilshanSandaruwan">github</a></div>
+            <div>
+                <img src="assets/images/inster.png">
+            </div>
+            <div>
+                <img src="assets/images/linkedin.png">
+            </div>
+            <div>
+                <img src="assets/images/free-youtube-logo-icon-2431-thumb%201.png">
+            </div>
+            <div>
+                <img src="assets/images/github.png">
+            </div>
         </nav>
         <div>
             <img src="assets/images/profilepoto.png">
