--- a/index.html
+++ b/index.html
@@ -57,17 +57,12 @@
                 positive attitude and good team work ability.
                 </p>
                 <pre>
- Name : Dilshan Sandaruwan Saddamangala  
-
- Age : 18 years                      
-
- Contact : +94 70 4348231
-
- Location : Galle, Sri Lanka
-
- Email : shydor2005@gmail.com
-
-Degree : Undergraduate
+   Name : Dilshan Sandaruwan Saddamangala
+   Age : 18 years
+   Contact : +94 70 4348231
+   Location : Galle, Sri Lanka
+   Email : shydor2005@gmail.com
+   Degree : Undergraduate
                 </pre>
         </article>
     </section>
@@ -182,25 +177,47 @@ Degree : Undergraduate
 
     <section>
         <h1>Gallery</h1>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <img src="assets/images/poto1.png">
+        </div>
+        <div>
+            <img src="assets/images/poto2.png">
+        </div>
+        <div>
+            <img src="assets/images/poto3.png">
+        </div>
+        <div>
+            <img src="assets/images/poto4.png">
+        </div>
+        <div>
+            <img src="assets/images/poto5.png">
+        </div>
+        <div>
+            <img src="assets/images/poto6.png">
+        </div>
     </section>
 
     <section>
         <h1>Meet my projects</h1>
-        <nav></nav>
+        <nav>
+            <div></div>
+            <div></div>
+            <div></div>
+        </nav>
     </section>
 
     <section>
         <h1>Contact me</h1>
         <section>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+                
+            </div>
         </section>
         <section></section>
     </section>
