--- a/index.html
+++ b/index.html
@@ -209,15 +209,9 @@
     <section>
         <h1>Contact me</h1>
         <section>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-            <div>
-                
-            </div>
+            <div></div>
+            <div></div>
+            <div></div>
         </section>
         <section></section>
     </section>
@@ -225,125 +219,15 @@
     <footer>
         <nav>
             <menu>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div> <img src="assets/images/Instagram.png"></div>
+                <div> <img src="assets/images/Instagram%20(1).png"></div>
+                <div><img src="assets/images/Twitter.png"></div>
+                <div><img src="assets/images/GitHub.png"></div>
             </menu>
         </nav>
     </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
