--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <title>My portfolio</title>
     <link rel="icon"href="nameicon.png">
-    <meta name="keywords" content="Dilsha Sandaruwan,Software Engineer , Fullstack Developer , Student, Software Engineer Student, Best Software Engineer in the Sri lanka, Web Designer">
+    <meta name="keywords" content="Dilsha Sandaruwan,Software Engineer , Fullstack Developer , Student, Software Engineer Student, Best Software Engineer in the Sri lanka, Web Designer,brilliance,dog,cat,viral,hope">
     <meta name="description" content="Empowering the web with end-to-end brilliance.">
     <meta name="owner" content="Dilshan Sandaruwan">
     <meta name="author" content="Dilshan Sandaruwan">
@@ -200,7 +200,7 @@
     <section>
         <h1>Meet my projects</h1>
         <nav>
-            <div></div>
+            <div><div><a href="https://www.instagram.com/sadaruwan9855/">Instargrame</a></div></div>
             <div></div>
             <div></div>
         </nav>
@@ -213,7 +213,14 @@
             <div></div>
             <div></div>
         </section>
-        <section></section>
+        <section>
+            <form>
+                <fieldset>
+                    <legend>Contact Me</legend>
+
+                </fieldset>
+            </form>
+        </section>
     </section>
 
     <footer>
