--- a/index.html
+++ b/index.html
@@ -216,8 +216,13 @@
         <section>
             <form>
                 <fieldset>
-                    <legend>Contact Me</legend>
-
+                    <legend>Get in Touch</legend>
+                    <input name="Name"  type="textCusName" placeholder="Your name" required >
+                    <br>
+                    <br>
+                    <input name="email" type="email" placeholder="Your Email" required>
+                    <br>
+                    <br>
                 </fieldset>
             </form>
         </section>
