--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
                     <input name="email" type="email" placeholder="Your Email" required>
                     <br>
                     <br>
+                    <textarea rows="6"  name="Massage" placeholder="Massage"></textarea>
+                    <br>
+                    <br>
+                    <button  type="submit" formaction="save_customer">Submit</button>
                 </fieldset>
             </form>
         </section>
