--- a/index.html
+++ b/index.html
@@ -209,9 +209,26 @@
     <section>
         <h1>Contact me</h1>
         <section>
-            <div></div>
-            <div></div>
-            <div></div>
+                <div>
+                   <img src="assets/images/call.png">
+                    <h2>Call :</h2>
+                    <h3>+94 704348231</h3>
+                </div>
+                <div>
+                    <img src="assets/images/mail.png">
+                    <h2>E - Mail :</h2>
+                    <h3>shydor2005@gmail.com</h3>
+                </div>
+                <div>
+                    <img src="assets/images/follow.png">
+                    <br>
+                    <br>
+                    <img src="assets/images/linkin.png"><a href="https://www.linkedin.com/in/dilshan-sandaruwan-16013027b/">linkedin</a>
+                    <img src="assets/images/git.png"><a href="https://github.com/DilshanSandaruwan">github</a>
+                    <img src="assets/images/insta.png"><a href="https://www.instagram.com/sadaruwan9855/">Instargrame</a>
+                </div>
+            <br>
+            <br>
         </section>
         <section>
             <form>
