--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
     <title>My portfolio</title>
-    <link rel="icon"href="nameicon.png">
-    <meta name="keywords" content="Dilsha Sandaruwan,Software Engineer , Fullstack Developer , Student, Software Engineer Student, Best Software Engineer in the Sri lanka, Web Designer,brilliance,dog,cat,viral,hope">
+    <link rel="icon" href="nameicon.png">
+    <meta name="keywords" content="Dilshan Sandaruwan,Software Engineer , Full Stack Developer , Student, Software Engineer Student, Best Software Engineer in the Sri lanka, Web Designer,brilliance,dog,cat,viral,hope">
     <meta name="description" content="Empowering the web with end-to-end brilliance.">
     <meta name="owner" content="Dilshan Sandaruwan">
     <meta name="author" content="Dilshan Sandaruwan">
@@ -21,7 +21,7 @@
     <section>
 
         <nav>
-            <div><a href="https://www.instagram.com/sadaruwan9855/">Instargrame</a></div>
+            <div><a href="https://www.instagram.com/sadaruwan9855/">Instagram</a></div>
             <div><a href="https://www.linkedin.com/in/dilshan-sandaruwan-16013027b/">linkedin</a></div>
             <div><a href="https://www.youtube.com/">youtube</a></div>
             <div><a href="https://github.com/DilshanSandaruwan">github</a></div>
@@ -49,7 +49,7 @@
             <img src="assets/images/whoIam.png">
         </div>
         <article>
-            <p>I am Dilshan. A student of Grduate Diploma in Software Engineering 
+            <p>I am Dilshan. A student of Graduate Diploma in Software Engineering
                 and currently completing my Second semester. I like to improve my 
                 skills working with projects.
             
@@ -106,8 +106,8 @@
             <img src="assets/images/Rectangle%2087.png">
             <hgroup>
                 <h2>Primary School </h2>
-                <h4>Sirisumana  Collage Rathgama
-                    2009 - 2013</h4>
+                <h4>Sirisumana  Primary School, Rathgama
+                    2011 - 2015</h4>
             </hgroup>
         </div>
     </section>
@@ -200,7 +200,7 @@
     <section>
         <h1>Meet my projects</h1>
         <nav>
-            <div><div><a href="https://www.instagram.com/sadaruwan9855/">Instargrame</a></div></div>
+            <div><div><a href="https://www.instagram.com/sadaruwan9855/">Instagram</a></div></div>
             <div></div>
             <div></div>
         </nav>
