--- a/Assignments/CSS/case 1/index.html
+++ b/Assignments/CSS/case 1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" href="8.0.1_normalize.css">
+
     <style>
         body>section:first-child{
             position: absolute;
@@ -212,6 +212,7 @@
             border-top-left-radius: 250px;
         }
     </style>
+    <link rel="stylesheet" href="assets/css/8.0.1_normalize.css">
 </head>
 <body>
 <section><div><div></div></div></section>
