--- a/Assignments/CSS/case2/index.html
+++ b/Assignments/CSS/case2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Case Two</title>
-    <link href="assets/css/normalize.css" rel="stylesheet">
+
     <link href="assets/fontawsome/css/all.min.css" rel="stylesheet">
 
     <style>
@@ -130,6 +130,7 @@
 
 
     </style>
+    <link rel="stylesheet" href="assests/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
 
 </head>
 <body>
