--- a/Assignments/CSS/case3/index.html
+++ b/Assignments/CSS/case3/index.html
@@ -6,62 +6,94 @@
     <link rel="stylesheet" href="../../../assets/necolas.github.io_normalize.css_8.0.1_normalize.css">
 
     <style>
+        #fixed>div{
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom:0;
+            margin: auto;
+            border-radius: 100%;
+        }
+        #fixed>div:nth-child(1){
+            border: darkcyan solid 20px ;
+            width: 300px;
+            height: 300px;
+        }
+
+        #fixed>div:nth-child(2){
+            border: red solid 20px;
+            width: 260px;
+            height: 260px;
+        }
 
         div{
-            margin: auto;
-            position: fixed;
-            width:400px ;
-            height: 400px;
-            border-radius: 100%;
-            background-color:darkgray;
             left: 0;
             right: 0;
             top: 0;
             bottom: 0;
-        }
-        div>div{
             margin: auto;
-            position: fixed;
-            width:350px ;
-            height: 350px;
             border-radius: 100%;
-            background-color:red;
+        }
+
+        .notFixed{
+            position: relative;
+            width: 100%;
+            height: 100vh;
+        }
+
+        .notFixed>div{
+            position: absolute;
+            top : 0;
+            bottom: 0;
             left: 0;
             right: 0;
-            top: 0;
-            bottom: 0;
+            width: 260px;
+            height: 260px;
+
         }
 
-        div>div>div{
-            margin: auto;
-            position: fixed;
-            width:300px ;
-            height: 300px;
-            border-radius: 100%;
-            background-color:purple;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
+        body>section:nth-child(2)>div{
+            background: darkmagenta;
+        }
+        body>section:nth-child(3)>div{
+            background: cornflowerblue;
+        }
+        body>section:nth-child(4)>div{
+            background-color: orangered;
         }
 
-
-        #Hello{
-            margin-top: 145px;
-            margin-left: 100px;
-            font-family: AnjaliOldLipi;
-            color: lightgoldenrodyellow;
+        .notFixed>div>p{
+            padding-top: 90px;
+            color: seashell;
+            font-size: 24px;
+            text-align: center;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-<div>
-    <div>
-        <div>
-            <h1 id="Hello">Hello</h1>
-        </div>
-    </div>
-</div>
+<section id="fixed">
+    <div></div>
+    <div></div>
+</section>
 
+<section class="notFixed">
+    <div>
+        <p>Hello</p>
+    </div>
+</section>
+
+<section class="notFixed">
+    <div>
+        <p>Welcome to</p>
+    </div>
+</section>
+
+<section class="notFixed">
+    <div>
+        <p>Institute of Software Engineering</p>
+    </div>
+</section>
 </body>
 </html>
