--- a/Assignments/CSS/case4/index.html
+++ b/Assignments/CSS/case4/index.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="assets/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
+
+    <style>
+
+        .A{
+            width: 300px;
+            height:200px;
+            display: inline-block;
+        }
+
+        div:first-child{
+            background-color: red;
+        }
+        div:nth-child(2){
+            background-color: green;
+        }
+        div:nth-child(3){
+            background-color: orangered;
+        }
+        div:nth-child(4){
+            background-color: purple;
+        }
+    </style>
 </head>
 <body>
-
+<div class="A"></div>
+<div class="A"></div>
+<div class="A"></div>
+<div class="A"></div>
 </body>
 </html>
