--- a/Assignments/CSS/case4/index.html
+++ b/Assignments/CSS/case4/index.html
@@ -2,35 +2,118 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="assets/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
+    <title>Case Four</title>
+    <link href="assets/css/normalize.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
     <style>
-
-        .A{
-            width: 300px;
-            height:200px;
-            display: inline-block;
+        * {
+            font-family: 'Source Sans Pro', sans-serif;
+            font-weight: bold;
         }
 
-        div:first-child{
-            background-color: red;
+        section {
+            width: 100%;
+            height: 100vh;
         }
-        div:nth-child(2){
-            background-color: green;
+
+        section > section {
+            height: 90%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        div:nth-child(3){
-            background-color: orangered;
+
+        section > section > p {
+            font-size: 100px;
         }
-        div:nth-child(4){
-            background-color: purple;
+
+        section > div {
+            width: 100%;
+            height: 10%;
+            color: white;
+            position: sticky;
+            top: 0px;
         }
+
+        section:nth-child(1) > div {
+            background: red;
+        }
+
+        section:nth-child(1) > section {
+            background: white;
+        }
+
+        section:nth-child(2) > div {
+            background: blue;
+        }
+
+        section:nth-child(2) > section {
+            background: cornflowerblue;
+        }
+
+        section:nth-child(3) > div {
+            background: black;
+        }
+
+        section:nth-child(3) > section {
+            background: #333960;
+        }
+
+        section:nth-child(4) > div {
+            background: maroon;
+        }
+
+        section:nth-child(4) > section {
+            background: #fd4040;
+        }
+
+        section > div > p {
+            margin-top: 0px;
+            padding-left: 15px;
+            padding-top: 15px;
+        }
+
     </style>
+
 </head>
 <body>
-<div class="A"></div>
-<div class="A"></div>
-<div class="A"></div>
-<div class="A"></div>
+<section>
+    <div>
+        <p>Card 01</p>
+    </div>
+    <section>
+        <p>Hello</p>
+    </section>
+</section>
+
+<section>
+    <div>
+        <p>Card 02</p>
+    </div>
+    <section>
+        <p>How</p>
+    </section>
+</section>
+
+<section>
+    <div>
+        <p>Card 03</p>
+    </div>
+    <section>
+        <p>Are</p>
+    </section>
+</section>
+
+<section>
+    <div>
+        <p>Card 04</p>
+    </div>
+    <section>
+        <p>You..?</p>
+    </section>
+</section>
 </body>
 </html>
