--- a/Assignments/CSS/case5 and case6/case5.html
+++ b/Assignments/CSS/case5 and case6/case5.html
@@ -2,20 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="assests/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
-
+    <title>case 05</title>
+    <meta name="viewport" content="width=device-width initial-scale=1">
+    <link rel="stylesheet" href="necolas.github.io_normalize.css_8.0.1_normalize.css">
     <style>
-        section{
-            height: 97vh;
-            border: black solid 1px;
+        body>section{
+            height: 100vh;
+            height: 90vh;
         }
         body>section>section{
             position: absolute;
             height: 99.6%;
+            width: calc(100%/4);
+            border: 1px solid red;
             width: calc(99.6%/4);
             border: 1px solid black;
             top: 0;
+        }
+        body>section>section>div{
+            width: 100%;
+            width: 99.6%;
+            height: calc(99.6%/3);
+            border: 1px solid black;
         }
         body>section>section:nth-child(2){
             left: 25%;
@@ -26,46 +34,42 @@
         body>section>section:nth-child(4){
             left: 75%;
         }
-        body>section>section>div{
-            width: 99.6%;
-            height: calc(99.6%/3);
-            border: 1px solid black;
-        }
         body>section>section:nth-child(1)>div:first-child{
-            background-color: red;
+            background-image: url("assets/images/img_3.png");
         }
         body>section>section:nth-child(1)>div:nth-child(2){
-            background-color: deeppink;
+            background-image: url("assets/images/img_2.png");
         }
         body>section>section:nth-child(1)>div:last-child{
-            background-color: purple;
+            background-image: url("assets/images/img_1.png");
         }
         body>section>section:nth-child(2)>div:first-child{
-            background-color: green;
+            background-image: url("assets/images/img.png");
         }
         body>section>section:nth-child(2)>div:nth-child(2){
-            background-color: blue;
+            background-image: url("assets/images/img_4.png");
         }
         body>section>section:nth-child(2)>div:last-child{
-            background-color: yellow;
+            background-image: url("assets/images/img_5.png");
         }
         body>section>section:nth-child(3)>div:first-child{
-            background-color: orangered;
+            background-image: url("assets/images/img_6.png");
         }
         body>section>section:nth-child(3)>div:nth-child(2){
-            background-color: saddlebrown;
+            background-image: url("assets/images/img_7.png");
         }
         body>section>section:nth-child(3)>div:last-child{
-            background-color: cornflowerblue;
+            background-image: url("assets/images/img_8.png");
         }
+
         body>section>section:nth-child(4)>div:first-child{
-            background-color: deeppink;
+            background-image: url("assets/images/img_9.png");
         }
         body>section>section:nth-child(4)>div:nth-child(2){
-            background-color: hotpink;
+            background-image: url("assets/images/img_11.png");
         }
         body>section>section:nth-child(4)>div:last-child{
-            background-color: deepskyblue;
+            background-image: url("assets/images/img_12.png");
         }
     </style>
 </head>
@@ -76,25 +80,21 @@
         <div></div>
         <div></div>
     </section>
-
     <section>
         <div></div>
         <div></div>
         <div></div>
     </section>
-
     <section>
         <div></div>
         <div></div>
         <div></div>
     </section>
-
     <section>
         <div></div>
         <div></div>
         <div></div>
     </section>
 </section>
-
 </body>
 </html>
