--- a/Assignments/CSS/case5 and case6/case5.html
+++ b/Assignments/CSS/case5 and case6/case5.html
@@ -6,95 +6,69 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="necolas.github.io_normalize.css_8.0.1_normalize.css">
     <style>
-        body>section{
-            height: 100vh;
-            height: 90vh;
-        }
-        body>section>section{
-            position: absolute;
-            height: 99.6%;
-            width: calc(100%/4);
-            border: 1px solid red;
-            width: calc(99.6%/4);
-            border: 1px solid black;
-            top: 0;
-        }
-        body>section>section>div{
+
+        section{
             width: 100%;
-            width: 99.6%;
-            height: calc(99.6%/3);
-            border: 1px solid black;
+            height: 98vh;
+            border: 2px;
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            grid-template-rows: repeat(3,1fr);
         }
-        body>section>section:nth-child(2){
-            left: 25%;
-        }
-        body>section>section:nth-child(3){
-            left: 50%;
-        }
-        body>section>section:nth-child(4){
-            left: 75%;
-        }
-        body>section>section:nth-child(1)>div:first-child{
+
+        body>section>div:nth-child(1){
             background-image: url("assets/images/img_3.png");
         }
-        body>section>section:nth-child(1)>div:nth-child(2){
+        body>section>div:nth-child(2){
             background-image: url("assets/images/img_2.png");
         }
-        body>section>section:nth-child(1)>div:last-child{
+        body>section>div:nth-child(3){
             background-image: url("assets/images/img_1.png");
         }
-        body>section>section:nth-child(2)>div:first-child{
+        body>section>div:nth-child(4){
             background-image: url("assets/images/img.png");
         }
-        body>section>section:nth-child(2)>div:nth-child(2){
+        body>section>div:nth-child(5){
             background-image: url("assets/images/img_4.png");
         }
-        body>section>section:nth-child(2)>div:last-child{
+        body>section>div:nth-child(6){
             background-image: url("assets/images/img_5.png");
         }
-        body>section>section:nth-child(3)>div:first-child{
+        body>section>div:nth-child(7){
             background-image: url("assets/images/img_6.png");
         }
-        body>section>section:nth-child(3)>div:nth-child(2){
+        body>section>div:nth-child(8){
             background-image: url("assets/images/img_7.png");
         }
-        body>section>section:nth-child(3)>div:last-child{
+        body>section>div:nth-child(9){
             background-image: url("assets/images/img_8.png");
         }
 
-        body>section>section:nth-child(4)>div:first-child{
+        body>section>div:nth-child(10){
             background-image: url("assets/images/img_9.png");
         }
-        body>section>section:nth-child(4)>div:nth-child(2){
+        body>section>div:nth-child(11){
             background-image: url("assets/images/img_11.png");
         }
-        body>section>section:nth-child(4)>div:last-child{
+        body>section>div:nth-child(12){
             background-image: url("assets/images/img_12.png");
         }
     </style>
 </head>
 <body>
 <section>
-    <section>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
-    <section>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
-    <section>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
-    <section>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </section>
 </body>
 </html>
