--- a/Assignments/CSS/case5 and case6/case5.html
+++ b/Assignments/CSS/case5 and case6/case5.html
@@ -8,7 +8,7 @@
     <style>
 
         section{
-            width: 100%;
+            width: 98vw;
             height: 98vh;
             border: 2px;
             display: grid;
