--- a/Assignments/CSS/case6/index.html
+++ b/Assignments/CSS/case6/index.html
@@ -3,8 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        section{
+            width: 98vw;
+            height: 98vh;
+            border: 2px solid black;
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            grid-template-rows: repeat(3,1fr);
+        }
+
+        section>div:nth-child(1){
+            grid-column: 1/3;
+            grid-row: 1/2;
+        }
+        section>div:nth-child(3){
+            grid-row: 1/4;
+            grid-column:4/5;
+        }
+        section>div:nth-child(8){
+            grid-column: 2/4;
+            grid-row: 3/4;
+        }
+        body>section>div:nth-child(1){
+            background-image: url("assets/images/img_3.png");
+        }
+        body>section>div:nth-child(2){
+            background-image: url("assets/images/img_3.png");
+        }
+        body>section>div:nth-child(3){
+            background-image: url("assets/images/img_1.png");
+        }
+        body>section>div:nth-child(4){
+            background-image: url("assets/images/img.png");
+        }
+        body>section>div:nth-child(5){
+            background-image: url("assets/images/img_4.png");
+        }
+        body>section>div:nth-child(6){
+            background-image: url("assets/images/img_5.png");
+        }
+        body>section>div:nth-child(7){
+            background-image: url("assets/images/img_6.png");
+        }
+        body>section>div:nth-child(8){
+            background-image: url("assets/images/img_7.png");
+        }
+        body>section>div:nth-child(9){
+            background-image: url("assets/images/img_8.png");
+        }
+        body>section>div:nth-child(10){
+            background-image: url("assets/images/img_9.png");
+        }
+        body>section>div:nth-child(11){
+            background-image: url("assets/images/img_11.png");
+        }
+        body>section>div:nth-child(12){
+            background-image: url("assets/images/img_12.png");
+        }
+    </style>
 </head>
 <body>
-
+<section>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
 </body>
 </html>
