--- a/index.html
+++ b/index.html
@@ -4,45 +4,98 @@
 
     <title>My portfolio</title>
     <link rel="icon" href="nameicon.png">
+    <link href="assets/fontawsome/css/all.min.css" rel="stylesheet">
     <meta name="keywords" content="Dilshan Sandaruwan,Software Engineer , Full Stack Developer , Student, Software Engineer Student, Best Software Engineer in the Sri lanka, Web Designer,brilliance,dog,cat,viral,hope">
     <meta name="description" content="Empowering the web with end-to-end brilliance.">
     <meta name="owner" content="Dilshan Sandaruwan">
     <meta name="author" content="Dilshan Sandaruwan">
     <meta name="theme-colour" content="red">
     <meta name ="robots" content="index,follow">
+
+    <style>
+        header{
+            background-color: snow;
+            padding: 10px;
+            /*position: relative;*/
+            height: 50px;
+
+            top: 0;
+            width: 100%;
+            position: fixed;
+            z-index: 3;
+        }
+
+        header>img{
+            width: 10%;
+            margin: 7px;
+        }
+
+        header>nav>ul>li {
+            display: inline;
+            margin-right: 20px;
+        }
+        header>nav>ul>li>a{
+            text-decoration: none;
+            color: #0C1154;
+        }
+        header>nav>ul{
+            position: absolute;
+            top: 5px;
+            right: 25px
+        }
+        footer>nav>div{
+            display: inline;
+            margin-right: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
+        <img src="assets/images/Portfolio.png">
         <nav>
-            <menu></menu>
+                <ul>
+                    <li><i class="fa-solid fa-house"></i> <a href="#"> Home</a> </li>
+                    <li><i class="fa-brands fa-servicestack"></i> <a href="#"> About </a></li>
+                    <li><i class="fa-solid fa-address-book"></i> <a href="#"> Education </a></li>
+                    <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Gallery </a></li>
+                    <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Projects</a></li>
+                    <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Contact </a></li>
+                </ul>
         </nav>
     </header>
 
-    <section>
 
+    <section id="section01">
+        <div>
+            <img src="assets/images/Portfolio.png">
+        </div>
+        <div>
+            <img src="assets/images/hello.png">
+        </div>
         <nav>
             <div><a href="https://www.instagram.com/sadaruwan9855/">Instagram</a></div>
             <div><a href="https://www.linkedin.com/in/dilshan-sandaruwan-16013027b/">linkedin</a></div>
             <div><a href="https://www.youtube.com/">youtube</a></div>
             <div><a href="https://github.com/DilshanSandaruwan">github</a></div>
-            <div>
+            <div class="sitePotos">
                 <img src="assets/images/inster.png">
             </div>
-            <div>
+            <div class="sitePotos">
                 <img src="assets/images/linkedin.png">
             </div>
-            <div>
+            <div class="sitePotos">
                 <img src="assets/images/free-youtube-logo-icon-2431-thumb%201.png">
             </div>
-            <div>
+            <div class="sitePotos">
                 <img src="assets/images/github.png">
             </div>
+            <div id="profilePic">
+                <img src="assets/images/profilepoto.png">
+            </div>
         </nav>
-        <div>
-            <img src="assets/images/profilepoto.png">
-        </div>
+
     </section>
-    
+
     <section>
         <h1>Who I am</h1>
         <div>
@@ -50,10 +103,10 @@
         </div>
         <article>
             <p>I am Dilshan. A student of Graduate Diploma in Software Engineering
-                and currently completing my Second semester. I like to improve my 
+                and currently completing my Second semester. I like to improve my
                 skills working with projects.
-            
-                Im very passionate and dedicated to my work. An easy going person with a 
+
+                Im very passionate and dedicated to my work. An easy going person with a
                 positive attitude and good team work ability.
                 </p>
                 <pre>
@@ -248,182 +301,16 @@
             </form>
         </section>
     </section>
-
     <footer>
         <nav>
-            <menu>
                 <div> <img src="assets/images/Instagram.png"></div>
                 <div> <img src="assets/images/Instagram%20(1).png"></div>
                 <div><img src="assets/images/Twitter.png"></div>
                 <div><img src="assets/images/GitHub.png"></div>
-            </menu>
         </nav>
     </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
