--- a/Assignments/CSS/case 1/index.html
+++ b/Assignments/CSS/case 1/index.html
@@ -4,226 +4,225 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-
     <style>
-        body>section:first-child{
+        body>section:nth-child(1){
             position: absolute;
             top: 0;
             left: 0;
-            width: 50vw;
+            width:50vw;
             height: 50vh;
-            background: red;
+            background-color: red;
         }
-
         body>section:nth-child(2){
             position: absolute;
             bottom: 0;
             left: 0;
-            width: 50vw;
+            width:50vw;
             height: 50vh;
-            background: yellow;
+            background-color: yellow;
         }
-
         body>section:nth-child(3){
             position: absolute;
             top: 0;
             right: 0;
-            width: 50vw;
+            width:50vw;
             height: 50vh;
-            background: green;
+            background-color: green;
         }
-
         body>section:nth-child(4){
             position: absolute;
             bottom: 0;
-            right: 0;
-            width: 50vw;
+            right:0;
+            width:50vw;
             height: 50vh;
-            background: deeppink;
+            background-color: deeppink;
         }
-
-        body>section:nth-child(5){
+        body>section:nth-child(1)>div{
             position: absolute;
-            left: 0;
+            margin: auto;
             top: 0;
+            left: 0;
             right: 0;
             bottom: 0;
-            margin: auto;
-            width: 300px;
-            height: 300px;
-            background: white;
-
-        }
-
-        body>section:nth-child(5)>div{
-            position: absolute;
-            left: 0;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            margin: auto;
-            width: 150px;
-            height: 150px;
-            background: red;
+            width:30vw;
+            height: 30vh;
             border-radius: 100%;
+            background-color: whitesmoke;
         }
-
-        body>section:first-child>div{
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            top: 0;
-            width: 300px;
-            height: 300px;
-            margin: auto;
-            background: white;
-            border-radius: 100%;
-        }
-
         body>section:nth-child(2)>div{
             position: absolute;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            top: 0;
-            width: 300px;
-            height: 300px;
             margin: auto;
-            background: white;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width:30vw;
+            height: 30vh;
             border-radius: 100%;
+            background-color: whitesmoke;
         }
-
         body>section:nth-child(3)>div{
             position: absolute;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            top: 0;
-            width: 300px;
-            height: 300px;
             margin: auto;
-            background: white;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width:30vw;
+            height: 30vh;
             border-radius: 100%;
+            background-color: whitesmoke;
         }
-
         body>section:nth-child(4)>div{
             position: absolute;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            top: 0;
-            width: 300px;
-            height: 300px;
             margin: auto;
-            background: white;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width:30vw;
+            height: 30vh;
             border-radius: 100%;
+            background-color: whitesmoke;
         }
-
+        body>section:nth-child(5){
+            position: absolute;
+            margin: auto;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width:25vw;
+            height: 25vh;
+            background-color: whitesmoke;
+        }
+        body>section:nth-child(5)>div{
+            position: absolute;
+            margin: auto;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width:20vw;
+            height: 20vh;
+            border-radius: 100%;
+            background-color: red;
+        }
         body>section:nth-child(1)>div>div{
             position: absolute;
+            margin: auto;
+            top: 0;
             left: 0;
             bottom: 0;
             right: 0;
-            top: 0;
-            width: 150px;
-            height: 150px;
-            margin: auto;
-            background: red;
-
+            width:20vw;
+            height: 20vh;
+            background-color: red;
         }
-
         body>section:nth-child(2)>div>div{
             position: absolute;
+            margin: auto;
+            top: 0;
             left: 0;
             bottom: 0;
             right: 0;
-            top: 0;
-            width: 150px;
-            height: 150px;
-            margin: auto;
-            background: red;
+            width:20vw;
+            height: 20vh;
+            background-color: red;
         }
-
         body>section:nth-child(3)>div>div{
             position: absolute;
+            margin: auto;
+            top: 0;
             left: 0;
             bottom: 0;
             right: 0;
-            top: 0;
-            width: 150px;
-            height: 150px;
-            margin: auto;
-            background: red;
+            width:20vw;
+            height: 20vh;
+            background-color: red;
         }
         body>section:nth-child(4)>div>div{
             position: absolute;
+            margin: auto;
+            top: 0;
             left: 0;
             bottom: 0;
             right: 0;
-            top: 0;
-            width: 150px;
-            height: 150px;
-            margin: auto;
-            background: red;
+            width:20vw;
+            height: 20vh;
+            background-color: red;
         }
-
         body>section:nth-child(6){
             background-color: white;
             position: absolute;
             top: 0;
             left: 0;
             margin: auto;
-            height: 150px;
-            width: 150px;
-            border-bottom-right-radius: 250px;
+            height: 15%;
+            width: 16%;
+            border-bottom-right-radius: 100%;
         }
-
         body>section:nth-child(7){
             background-color: white;
             position: absolute;
-            bottom: 0;
             left: 0;
+            bottom: 0;
             margin: auto;
-            height: 150px;
-            width: 150px;
-            border-top-right-radius: 250px;
+            height: 15%;
+            width: 16%;
+            border-top-right-radius: 100%;
         }
-
         body>section:nth-child(8){
             background-color: white;
             position: absolute;
             top: 0;
             right: 0;
             margin: auto;
-            height: 150px;
-            width: 150px;
-            border-bottom-left-radius: 250px;
+            height: 15%;
+            width: 16%;
+            border-bottom-left-radius: 100%;
         }
-
         body>section:nth-child(9){
             background-color: white;
             position: absolute;
-            bottom: 0;
             right: 0;
+            bottom: 0;
             margin: auto;
-            height: 150px;
-            width: 150px;
-            border-top-left-radius: 250px;
+            height: 15%;
+            width: 16%;
+            border-top-left-radius: 100%;
         }
     </style>
-    <link rel="stylesheet" href="assets/css/8.0.1_normalize.css">
 </head>
 <body>
-<section><div><div></div></div></section>
 
-<section><div><div></div></div></section>
+<section>
+    <div>
+        <div></div>
+    </div>
+</section>
 
-<section><div><div></div></div></section>
+<section>
+    <div>
+        <div></div>
+    </div>
+</section>
 
-<section><div><div></div></div></section>
+<section>
+    <div>
+        <div></div>
+    </div>
+</section>
 
-<section><div></div></section>
+<section>
+    <div>
+        <div></div>
+    </div>
+</section>
+
+<section>
+    <div></div>
+</section>
 
 <section></section>
 <section></section>
