--- a/Assignments/CSS/case6/index.html
+++ b/Assignments/CSS/case6/index.html
@@ -26,6 +26,9 @@
             grid-column: 2/4;
             grid-row: 3/4;
         }
+        section>div{
+            border: black solid 1px ;
+        }
         body>section>div:nth-child(1){
             background-image: url("assets/images/img_3.png");
         }
