--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
            position: relative;
            left: 30vw;
         }
+        body>section:nth-child(6)>div{
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
