--- a/index.html
+++ b/index.html
@@ -12,48 +12,12 @@
     <meta name="theme-colour" content="red">
     <meta name ="robots" content="index,follow">
     <link rel="stylesheet" href="css/myPortfolio.css">
-    <style>
-        body>section:nth-child(4){
-            position: relative;
-        }
-        body>section:nth-child(4)>img:nth-child(1){
-            position: absolute;
-            right: 30vw;
-            top: 135px;
-        }
-        body>section:nth-child(4)>section:nth-child(2){
-            display: inline-block;
-        }
-        body>section:nth-child(5){
-            position: relative;
-        }
-        body>section:nth-child(5)>img:nth-child(1){
-            position: relative;
-            left: 40vw;
-        }
-        body>section:nth-child(5)>section:nth-child(2)>div{
-            display: inline;
-            top: 20vh;
-            padding-left: 15px;
-        }
-        body>section:nth-child(5)>section:nth-child(2){
-            padding-top: 10vh;
-        }
+    <link rel="stylesheet" href="assets/necolas.github.io_normalize.css_8.0.1_normalize.css">
 
-        body>section:nth-child(7)>section:nth-child(2)>div{
-            display: inline;
-            position: relative;
-            padding-left: 20px;
-            padding-top: 20px;
-        }
-        body>section:nth-child(7)>img:nth-child(1){
-           position: relative;
-           left: 30vw;
-        }
-        body>section:nth-child(6)>div{
-            display: inline-block;
-        }
+    <style>
+
     </style>
+
 </head>
 <body>
     <header>
@@ -71,32 +35,33 @@
     </header>
 
     <section id="section01">
-        <img src="assets/images/profilepoto.png">
         <section>
-        <div>
-            <img src="assets/images/hello.png">
-        </div>
-        <h2 >Find Me</h2>
-        <nav>
+            <h1>
+                Hi I'M Dilshan Sandaruwan
+                <br>
+                A Full-Stack Developer
+            </h1>
 
+        <h2 >Find Me</h2>
+        <div>
 <!--            <div><a href="https://www.instagram.com/sadaruwan9855/">Instagram</a></div>-->
 <!--            <div><a href="https://www.linkedin.com/in/dilshan-sandaruwan-16013027b/">linkedin</a></div>-->
 <!--            <div><a href="https://www.youtube.com/">youtube</a></div>-->
 <!--            <div><a href="https://github.com/DilshanSandaruwan">github</a></div>-->
-            <div class="sitePotos">
                 <img src="assets/images/inster.png">
-            </div>
-            <div class="sitePotos">
+
                 <img src="assets/images/linkedin.png">
-            </div>
-            <div class="sitePotos">
+
                 <img src="assets/images/free-youtube-logo-icon-2431-thumb%201.png">
-            </div>
-            <div class="sitePotos">
+
                 <img src="assets/images/github.png">
             </div>
-        </nav>
+
+            <img src="assets/images/Vector.png">
         </section>
+
+        <div> <img src="assets/images/profilepoto.png"></div>
+
     </section>
 
     <section id="section02">
@@ -121,15 +86,15 @@
                 positive attitude and good team work ability.
 
                 Name : Dilshan Sandaruwan Saddamangala
-                    <br>
+
                 Age : 18 years
-                    <br>
+
                 Contact : +94 70 4348231
-                    <br>
+
                 Location : Galle, Sri Lanka
-                    <br>
+
                 Email : shydor2005@gmail.com
-                    <br>
+
                 Degree : Undergraduate
                 
                 <img src="assets/images/downloadCv.png">
@@ -281,7 +246,7 @@
         </section>
     </section>
 
-    <section>
+    <section id="section07">
         <h1>Contact me</h1>
         <section>
                 <div>
