--- a/index.html
+++ b/index.html
@@ -15,53 +15,11 @@
     <link rel="stylesheet" href="assets/necolas.github.io_normalize.css_8.0.1_normalize.css">
 
     <style>
-        body>section:nth-child(6)>section:nth-child(1){
-            position: relative;
-            right: 0;
-            left: 0;
-            height: 100vh;
-        }
-        body>section:nth-child(6)>section:nth-child(1)>img{
-            display: flex;
-        }
-
-        body>section:nth-child(6)>section:nth-child(1)>img:nth-child(1),img:nth-child(2),img:nth-child(3){
-            flex-direction: column;
-
-        }
-
-
-        body>section:nth-child(8)>section:nth-child(2){
-            background-color: #F3F1EC;
-            display: inline-block;
-        }
-        body>section:nth-child(8)>section:nth-child(3){
+        .txtfeaild{
             width: 50vw;
-            background-color: #F3F1EC;
-            display: inline-block;
+            height: 70px;
         }
-        /*body>section:nth-child(8)>section:nth-child(3)>form{*/
-        /*    width: 50vw;*/
-        /*}*/
-        body>section:nth-child(8)>section:nth-child(3)>form{
-            position: relative;
-            width: 70vw;
-            height: 68vh;
-            border-radius: 5%;
-        }
-        body>section:nth-child(8)>section:nth-child(3){
-            border-radius: 5%;
-            position: relative;
-            width: 72vw;
-            height: 85vh;
-            bottom: 35vh;
-            left: 10px;
-        }
-        body>section:nth-child(8)>section:nth-child(2){
-            width: 25vw;
-            height: 85vh;
-            border-radius: 10%;
-        }
+        
     </style>
 
 </head>
@@ -144,14 +102,14 @@
                 Degree : Undergraduate
 
                 <img src="assets/images/downloadCv.png">
-                </pre>
-                <pre>
 
                 </pre>
             </section>
+            <img src="assets/images/Vector2.png">
         </section>
 
         <section id="section03">
+            <img src="assets/images/Vector3.png">
             <img src="assets/images/educationText.png">
 
             <div>
@@ -187,7 +145,7 @@
                 </div>
 <!--                <img src="assets/images/Frame%202.png">-->
             </div>
-
+            <img src="assets/images/Vector4.png">
         </section>
 
         <section id="section4">
