Animation assingment updated

--- a/Assignments/CSS/transition/case1/index.html
+++ b/Assignments/CSS/transition/case1/index.html
@@ -12,23 +12,23 @@
 <div class="side-container">
     <div>
         <h1>Menu 1</h1>
-        <img src="assets/icons/home%20(1).png">
+        <img src="assets/icon/home%20(1).png">
     </div>
     <div>
         <h1>Menu 2</h1>
-        <img src="assets/icons/info.png">
+        <img src="assets/icon/info.png">
     </div>
     <div>
         <h1>Menu 3</h1>
-        <img src="assets/icons/contact-mail.png">
+        <img src="assets/icon/contact-mail.png">
     </div>
     <div>
         <h1>Menu 4</h1>
-        <img src="assets/icons/support.png">
+        <img src="assets/icon/support.png">
     </div>
     <div>
         <h1>Menu 5</h1>
-        <img src="assets/icons/support%20(1).png">
+        <img src="assets/icon/support%20(1).png">
     </div>
 </div>
 </body>
