--- a/index.html
+++ b/index.html
@@ -19,7 +19,47 @@
             width: 50vw;
             height: 70px;
         }
-        
+
+        body>section:nth-child(6)>section:nth-child(2)>img:nth-child(1){
+            width: 20vw;
+        }
+        body>section:nth-child(6)>section:nth-child(2)>img:nth-child(2){
+            height: 40vh;
+        }
+        body>section:nth-child(6)>section:nth-child(2)>img:nth-child(3){
+            width: 20vw;
+        }
+        body>section:nth-child(6)>section:nth-child(2)>img:nth-child(4){
+            width: 20vw;
+        }
+        body>section:nth-child(6)>section:nth-child(2)>img:nth-child(5){
+            margin-bottom: 50px;
+            width: 30vw;
+        }
+        body>section:nth-child(6)>section:nth-child(2)>img:nth-child(6){
+            width: 20vw;
+        }
+        body>section:nth-child(6)>section:nth-child(2)>img:nth-child(7){
+            margin-bottom: 50px;
+            width: 30vw;
+            border-radius: 20px;
+        }
+
+        body>section:nth-child(6)>section:nth-child(1){
+            position: relative;
+            right: 0;
+            left: 0;
+            height: 100vh;
+        }
+        /*body>section:nth-child(6)>section:nth-child(1)>img{*/
+        /*    display: flex;*/
+        /*}*/
+
+        /*body>section:nth-child(6)>section:nth-child(1)>img:nth-child(1),img:nth-child(2),img:nth-child(3){*/
+        /*    flex-direction: column;*/
+
+        /*}*/
+
     </style>
 
 </head>
@@ -228,6 +268,8 @@
                 <img src="assets/images/poto5.png">
 
                 <img src="assets/images/poto6.png">
+
+                <img src="assets/images/poto7.jpeg">
             </section>
 
         </section>
@@ -294,7 +336,6 @@
 
             </section>
 
-
     <footer>
         <nav>
                 <div> <img src="assets/images/Instagram.png"></div>
@@ -303,6 +344,8 @@
                 <div><img src="assets/images/GitHub.png"></div>
         </nav>
     </footer>
+
+
 </body>
 </html>
 
